# bilancio

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  check_events.py  codebase_for_llm.md  mkdocs.yml  pyproject.toml  rich_simulation.html  rich_simulation_final.html  rich_simulation_fixed.html  rich_simulation_improved.html  test_fixed.html
.claude/commands/: generate-codebase.md
.github/workflows/: claude-code-review.yml  claude.yml  keep-supabase-alive.yml  update-codebase-for-llm.yml
dashboards/expel_ring_analysis_dashboard/: README.md  streamlit_app.py
dashboards/expel_sweep_dashboard/: README.md  streamlit_app.py
dashboards/monotonicity_demo/: README.md  streamlit_app.py
docs/: 015_expel_sweep_agent_report.md  015_kalecki_ring_findings.md  018_dealer_integration_fixes.md  JOSS_READINESS_REPORT.md  changelog.md  cli.md  codebase_for_llm.md  concepts.md  exercises_scenarios.md  index.md  installation.md  quickstart.md
docs/analysis/: 016_dealer_comparison_analysis.md
docs/dealer_ring/: IMPLEMENTATION_NOTES.md
docs/design/: agent_instrument_specification.md
docs/guides/: kalecki_ring_sweep.md
docs/plans/: 000_setup.md  001_domain_system.md  003_cash_and_nonfin_exchange.md  004_banking.md  005_reserves_settlement_clearing_scheduler.md  006_analytics.md  007_deliverable.md  008_simulation.md  009_cli.md  010_ui_refactor.md  011_tbs.md  012_scheduled_actions_and_aliases.md  013_default_handling_modalities.md  014_kalecki_experiments.md  015_kalecki_experiments_analysis.md  016_dealer_kalecki_integration.md  016_dealer_ring_implementation.md  017_dealer_ring_html_report.md  018_dealer_comparison_experiments.md  019_dealer_metrics.md  020_dealer_mid_tracking_metrics.md  021_balanced_dealer_comparison.md  022_enhanced_instrumentation.md  023_default_aware_instrumentation.md  024_dealer_simulation_redesign.md  025_cloud_storage_for_experiment_results.md  029_job_system.md  031_cloud_storage.md  032_risk_assessor_integration.md  banks_dealers_integration.md  deploy_cloud_metrics.md
docs/prompts/: 015_expel_sweep_agent_prompt.md  scenario_translator_agent.md
docs/refactor_2026/: 025_phase1_cleanup.md  026_phase4_abstractions.md  027_executor_separation.md  028_cloud_executor.md  codebase_analysis.md
docs/research/: kappa_inversion_bug_analysis.md
docs/visualizations/: evacuee-crushed-attentive-flakily_comparison.html
examples/dealer_ring/: README.md  VERIFICATION_PROMPT.md  assemble_examples.py  example10_trader_rebucket.py  example11_partial_recovery.py  example12_capacity_crossing.py  example13_event_loop.py  example14_ticket_transfer.py  example1_migrating_claim.py  example2_cross_bucket.py  example3_clip_toggle.py  example4_vbt_layoff.py  example5_dealer_earns.py  example6_bid_passthrough.py  example7_no_interior_clipping.py  example8_guard_low_M.py  worked_examples.txt  (+2 more)
output/: rich_simulation.html  test_payments.html
scripts/: codebase_for_llm.md  generate_codebase_markdown.py  modal_wrapper.py  run_plan024_sweep.py
tests/: test_smoke.py
(+542 files in other folders)
